unpackaged/main/default/objects/ETCAR_Car__c/ETCAR_Car__c.object-meta.xml
<CustomObject>
    <label>Car</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Car Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>