unpackaged/main/default/objects/ETCAR_Car__c/fields/ETC_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ETC_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Limo</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>