unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_A_C__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_A_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A/C</label>
    <type>Checkbox</type>
</CustomField>