unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Auto__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto</label>
    <type>Checkbox</type>
</CustomField>