unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Available__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>