unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Car_Segment__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Car_Segment__c</fullName>
    <label>Car Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>