unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Car_Type__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sedan Car</fullName>
            </value>
            <value>
                <fullName>7 seater</fullName>
            </value>
            <value>
                <fullName>7 seater van</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>