unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Door__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Door__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Door</label>
    <length>10</length>
    <type>Text</type>
</CustomField>