unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Monthly_Price__c</fullName>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>