unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_People__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_People__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>People</label>
    <length>10</length>
    <type>Text</type>
</CustomField>