unpackaged/main/default/objects/ETCAR_Car__c/fields/ETCAR_Weekly_Price__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Weekly_Price__c</fullName>
    <label>Weekly Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>