unpackaged/main/default/objects/ETCAR_Car__c/recordTypes/ETC_Limo_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>ETC_Limo_Vehicle</fullName>
    <active>true</active>
    <label>Limo Vehicle</label>
</RecordType>