unpackaged/main/default/objects/ETCAR_Car__c/recordTypes/ETC_Rental_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>ETC_Rental_Vehicle</fullName>
    <active>true</active>
    <label>Rental Vehicle</label>
</RecordType>