unpackaged/main/default/objects/ETCAR_Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ETCAR_Car_Segment__c</columns>
    <columns>ETCAR_Car_Type__c</columns>
    <columns>ETCAR_Daily_Price__c</columns>
    <columns>ETCAR_Monthly_Price__c</columns>
    <columns>ETCAR_Weekly_Price__c</columns>
    <columns>ETCAR_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>